# bootspec

./: .editorconfig  .gitignore  Cargo.toml  README.md  flake.nix  schema.json
.github/workflows/: ci.yml  json-schema.yaml  update-flake-lock.yaml  update.yml
bootspec/: Cargo.toml  README.md  rfc0125_spec.json
bootspec/src/: deser.rs  error.rs  generation.rs  lib.rs  v1.rs
cases/expected-synthesis/15.09-plain/: boot.v1.json
cases/expected-synthesis/16.03-plain/: boot.v1.json
synthesize/: Cargo.toml  README.md
synthesize/integration-test-cases/: 15.09-plain.nix  16.03-plain.nix  16.09-plain.nix  17.03-plain.nix  17.09-plain.nix  18.03-plain.nix  18.09-plain.nix  19.03-plain.nix  19.09-plain.nix  20.03-plain.nix  20.09-plain.nix  21.05-plain.nix  21.11-plain.nix  21.11-specialisations.nix  verify.sh
synthesize/integration-test-cases/expected-synthesis/: 15.09-plain.json  16.03-plain.json  16.09-plain.json  17.03-plain.json  17.09-plain.json  18.03-plain.json  18.09-plain.json  19.03-plain.json  19.09-plain.json  20.03-plain.json  20.09-plain.json  21.05-plain.json  21.11-plain.json  21.11-specialisations.json
synthesize/integration-test-cases/expected-synthesis/16.03-plain/: boot.v1.json
synthesize/integration-test-cases/expected-synthesis/17.09-plain/: boot.v1.json
synthesize/integration-test-cases/expected-synthesis/18.09-plain/: boot.v1.json
synthesize/integration-test-cases/expected-synthesis/19.09-plain/: boot.v1.json
synthesize/integration-test-cases/expected-synthesis/20.03-plain/: boot.v1.json
synthesize/integration-test-cases/expected-synthesis/21.11-specialisations/: boot.v1.json
synthesize/integration-test-cases/expected-synthesis/21.11-specialisations/specialisation/: example.json
synthesize/src/: lib.rs  main.rs
validate/: Cargo.toml  README.md
validate/src/: main.rs
(+5 files in other folders)
