[package]
name = "bootspec"
version = "0.2.0"
edition = "2021"
description = "An implementation of NixOS RFC 125's bootspec datatype"
license = "MIT"
repository = "https://github.com/DeterminateSystems/bootspec"
documentation = "https://docs.rs/bootspec/latest/bootspec"
authors = ["Graham Christensen <graham@determinate.systems>", "Cole Helbling <cole.helbling@determinate.systems>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.40"

[dev-dependencies]
tempfile = "3.5.0"
