[package]
name = "synthesize"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.91"
tempfile = "3.19.1"
bootspec = { path = "../bootspec" }
clap = { version = "4.5.34", features = ["derive"] }

[dev-dependencies]
