[package]
name = "synthesize"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.99"
tempfile = "3.23.0"
bootspec = { path = "../bootspec" }
clap = { version = "4.5.48", features = ["derive"] }

[dev-dependencies]
